# AI-Augmented-LMS

./: .env.example  .gitignore  LICENSE  README.md  create_db.py  database.py  main.py  models.py  pyproject.toml  requirements.txt  test_redis.py  test_services.py  worker.py
.claude/: settings.json
app/: __init__.py  main.py
app/api/: __init__.py
app/api/v1/: analytics.py  auth.py  chat.py  flashcards.py  handouts.py  quizzes.py  router.py
app/core/: __init__.py  config.py  dependencies.py  exceptions.py  rate_limit.py  security.py
app/db/: __init__.py  base.py  session.py
app/models/: __init__.py  analytics.py  chat.py  handout.py  study.py  user.py
app/repositories/: __init__.py  analytics_repo.py  base.py  chat_repo.py  flashcard_repo.py  handout_repo.py  quiz_repo.py  user_repo.py
app/schemas/: __init__.py  analytics.py  auth.py  chat.py  handout.py  study.py
app/services/: __init__.py  analytics_service.py  auth_service.py  chat_service.py  flashcard_service.py  handout_service.py  queue_service.py  quiz_service.py  storage_service.py
app/services/ai/: __init__.py  base.py  groq_client.py  llm_service.py  prompts.py  rag_service.py  vlm_service.py
app/workers/: __init__.py  __main__.py  base_worker.py  handout_worker.py
scripts/: create_db.py  smoke_test.py
services/: llm_service.py  vlm_service.py
tests/: conftest.py
