[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-augmented-lms"
version = "0.1.0"
description = "AI-Augmented Learning Management System for ABU 500L Computer Engineering."
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["app/db/migrations"]
